# Web-App-Design-Project

./: LICENSE  README.md  docker-compose.yaml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/src/: db.sqlite3  dump.json
backend/src/config/: settings.py  urls.py
backend/src/events/: admin.py  middlewares.py  models.py
backend/src/events/api/: serializers.py  views.py
backend/src/events/migrations/: 0001_initial.py  0002_initial.py
backend/src/users/: admin.py  models.py  urls.py
backend/src/users/api/: serializers.py  views.py
backend/src/users/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/components/: EventCard.vue  Footer.vue  Header.vue
frontend/src/stores/: userStore.js
frontend/src/utils/: axiosConfig.js
